[package]
name = "tmfast"
version = "0.1.0"
authors = ["Cassaundra <cass@cassaundra.io>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
clap = "2.33.0"
csv = "1.1.1"
lazy_static = "1.3.0"
petgraph = "0.4.13"
reqwest = "0.9.18"
serde = { version = "1.0.94", features = ["derive"] }
termion = "1.5.3"
tokio = "0.1.22"
zip = "0.5.2"