[package]
name = "tmfast"
version = "0.1.0"
authors = ["Cassaundra <cass@cassaundra.io>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
clap = "2.33.0"
csv = "1.1.1"
env_logger = "0.6.2"
lazy_static = "1.3.0"
log = "0.4.6"
petgraph = "0.4.13"
reqwest = "0.9.18"
rmp-serde = "0.13.7"
serde = "1.0.94"
tokio = "0.1.22"
zip = "0.5.2"